# tsu-3cw-2021

./: .gitignore
about/: index.html
benchmarks/class_creating/: main.py
benchmarks/next_prime/: main.py
benchmarks/postgres/: all_in_one_time.py  one_by_one.py  select_1.py  web.py
benchmarks/postgres/v1/: README.md  web.py
benchmarks/postgres/v2/: all_in_one_time.py  impl.py  one_by_one.py  select_1.py
benchmarks/sleeps/: main.py
benchmarks/web/: main.py
benchmarks_rdbms/: README.md  main.py  web.py
c-api-bindings/: lib.c  setup.py  test_c_api_bindings.py
c_from_rust/: Cargo.toml  build.rs
c_from_rust/src/: main.rs  next_prime.c
cmp-time-next-prime/: test_time.py
db-schema/: docker-compose.yaml  migrate.py
google_docs_adapter/: main.py
py-rwa-macroses/: Cargo.toml
py-rwa-macroses/src/: lib.rs
pyo3-class-creating/: Cargo.toml  setup.py
pyo3-class-creating/src/: lib.rs
pyo3-fetch-db/: Cargo.toml  pyo3_fetch_db.pyi  setup.py  test_pyo3_fetch_db.py
pyo3-fetch-db/src/: lib.rs
pyo3-sleeps/: Cargo.toml  setup.py
pyo3-sleeps/src/: lib.rs
real-world-application/: Cargo.toml  demo.py  setup.py
real-world-application/src/: adapter.rs  cities_by_timezone.rs  flight_by_min_duration.rs  get_bookings.rs  get_flights.rs  get_flights_v2.rs  lib.rs  select_1.rs  utils.rs
using-pyo3/: Cargo.toml  setup.py  test_using_pyo3.py
using-pyo3/src/: lib.rs
