[package]
name = "pyo3-fetch-db"
version = "0.1.0"
edition = "2018"

[lib]
name = "pyo3_fetch_db"
crate-type = ["cdylib"]

[dependencies]
tokio = "1.6.0"
postgres-types = "0.2.1"
serde_json = "1.0.64"
pyo3-log = "0.3.1"
log = "0.4.14"

[dependencies.pyo3-asyncio]
version = "0.13.3"
features = ["tokio-runtime"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module", "serde"]

[dependencies.tokio-postgres]
version = "0.7.2"
features = ["with-serde_json-1"]
