[package]
name = "pyo3_sleeps"
version = "0.1.0"
edition = "2018"

[lib]
name = "pyo3_sleeps"
crate-type = ["cdylib"]

[dependencies]
pyo3-log = "0.3.1"
log = "0.4.14"
tokio = "1.7.1"

[dependencies.pyo3-asyncio]
version = "0.13.4"
features = ["tokio-runtime"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]
